feature * добавил получение списка столбцов из таблицы notion * добавлен файл с настройками, секретные настройки перенесены в отдельный файл * изменена версия springBoot, java * добавлены тестовые зависимости в pom файл

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 *.iml
 *.ipr
 
-### Файл с настройками проекта ###
-application.properties
+### Файл с секретными настройками проекта ###
+secrets.properties
 
 ### Maven ###
 target/
