--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ notion.api-url=https://api.notion.com/v1/
 notion.api-version=2022-06-28
 #app properties
 server.port=5000
+#logging.level.org.springframework=DEBUG
