--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,13 @@ notion.api-url=https://api.notion.com/v1/
 notion.api-version=2022-06-28
 #app properties
 server.port=5000
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
+#db
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./src/main/resources/h2database
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
