--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=5000
 logging.level.org.springframework=DEBUG
 #db
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:file:./src/main/resources/h2database
+spring.datasource.url=jdbc:h2:file:/opt/app/database
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
